--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1802,6 +1802,7 @@
                 <div class="service-links">
                     <a href="/service-watchdog.html" target="_blank">Info</a>
                     <a href="/watchdog/docs" target="_blank">API Docs</a>
+                    <a href="/config-watchdog.html" target="_blank">Config</a>
                 </div>
             </div>
 
